--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,26 @@
-$c-gray: #eee;
+$page-color: linear-gradient(to right, #191536, #000000);
+$additional-page-color: #05040b;
+$first-text-color: #fff;
+$second-text-color: #05c2df;
+$description-text-color: #929292;
+$context-menu-color: #191536;
+$dropdown-backgound-color-hover: #110e25;
+$date-color: #545454;
+
+$thin-font-weight: 400;
+$normal-font-weight: 500;
+$big-font-weight: 900;
+
+$h1-mobile-font-size: 26px;
+$h1-desktop-font-size: 46px;
+
+$h2-mobile-font-size: 21px;
+$h2-desktop-font-size: 36px;
+
+$h3-heavy-font-size: 16px;
+$h3-regular-font-size: 14px;
+$h3-mobile-font-size: 12px;
+
+$margin-header-for-desctop: 90px;
+
+$duration: 0.3s;
