--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -7,7 +7,7 @@ html {
 
 body {
   background: $page-color;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-weight: $normal-font-weight;
   font-size: 16px;
   margin: 0;
