--- a/src/styles/faq.scss
+++ b/src/styles/faq.scss
@@ -16,7 +16,7 @@
     width: fit-content;
     height: fit-content;
 
-    @include pageGrid;
+    @include page-grid;
   }
 
   &__content {
@@ -73,8 +73,8 @@
   }
 
   &__triangle {
-    width: 0px;
-    height: 0px;
+    width: 0;
+    height: 0;
     border-left: 4px solid transparent;
     border-right: 4px solid transparent;
     border-top: 4px solid $second-text-color;
