--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,9 +2,9 @@
   background: $additional-page-color;
   padding-bottom: 50px;
 
-  @include pageGrid;
+  @include page-grid;
 
-  @include onTablet {
+  @include on-tablet {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -12,7 +12,7 @@
     padding-bottom: 0;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     height: 100px;
   }
 
@@ -20,8 +20,8 @@
     grid-column: span 1;
     margin-bottom: 15px;
 
-    @include onTablet {
-      margin-bottom: 0px;
+    @include on-tablet {
+      margin-bottom: 0;
     }
   }
 
@@ -37,7 +37,7 @@
     display: flex;
     flex-direction: column;
 
-    @include onTablet {
+    @include on-tablet {
       flex-direction: row;
       gap: 43px;
     }
@@ -49,7 +49,7 @@
     flex-direction: column;
     gap: 12px;
 
-    @include onTablet {
+    @include on-tablet {
       display: none;
     }
   }
@@ -68,5 +68,5 @@
     grid-column: 2 / -1;
   }
 
-  @include paddingInline;
+  @include padding-inline;
 }
