--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,77 +5,78 @@
   }
 }
 
-@mixin onTablet {
+@mixin on-tablet {
   @media (min-width: 640px) {
     @content;
   }
 }
 
-@mixin onDesktop {
+@mixin on-desktop {
   @media (min-width: 1280px) {
     @content;
   }
 }
 
-@mixin pageGrid {
+@mixin page-grid {
   --colums: 2;
+
   display: grid;
   column-gap: 20px;
   grid-template-columns: repeat(var(--colums), 1fr);
 
-  @include onTablet {
+  @include on-tablet {
     --colums: 6;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     --colums: 12;
   }
 }
 
-@mixin paddingInline {
+@mixin padding-inline {
   padding-inline: 20px;
 
-  @include onTablet {
+  @include on-tablet {
     padding-inline: 34px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     padding-inline: 110px;
   }
 }
 
-@mixin paddingBlock {
+@mixin padding-block {
   padding-block: 50px;
 
-  @include onTablet {
+  @include on-tablet {
     padding-block: 70px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     padding-block: 100px;
   }
 }
 
-@mixin changeMargin($value, $tabletValue, $deskValue, $side) {
+@mixin change-margin($value, $tabletValue, $deskValue, $side) {
   margin-#{$side}: $value;
 
-  @include onTablet {
+  @include on-tablet {
     margin-#{$side}: $tabletValue;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin-#{$side}: $deskValue;
   }
 }
 
-@mixin changeFontSize($value, $tabletValue, $deskValue) {
+@mixin change-font-size($value, $tabletValue, $deskValue) {
   font-size: $value;
 
-  @include onTablet {
+  @include on-tablet {
     font-size: $tabletValue;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     font-size: $deskValue;
   }
 }
