--- a/src/styles/video-modal.scss
+++ b/src/styles/video-modal.scss
@@ -1,10 +1,7 @@
 .video-modal {
   display: none;
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   background-color: rgba(0, 0, 0, 0.8);
   justify-content: center;
   align-items: center;
@@ -31,5 +28,5 @@
 
 .video-player {
   width: 50vw;
-  height: calc(50vw * 0.5625);
+  height: calc(50vw * 0.56);
 }
