--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -25,5 +25,6 @@
     border: none;
     cursor: pointer;
     background-image: url('../images/close.svg');
+    background-color: inherit;
   }
 }
