--- a/src/styles/tech.scss
+++ b/src/styles/tech.scss
@@ -63,24 +63,35 @@
     position: absolute;
 
     &--1 {
-      grid-column: 5 / 6;
+      grid-column: 4 / 6;
       position: absolute;
-      margin-top: 95px;
+      margin-top: 115px;
+
+      @include on-tablet {
+        grid-column: 5 / 6;
+        margin-top: 95px;
+      }
     }
 
     &--2 {
       grid-column: 2 / 4;
       position: absolute;
-      margin-top: 450%;
+      top: 85%;
+
+      @include on-tablet {
+        top: 0;
+        margin-top: 450%;
+      }
     }
 
     &--3 {
       grid-column: 7 / -1;
       position: absolute;
-      margin-top: 90%;
+      top: 62%;
 
       @include on-tablet {
         grid-column: 9 / -1;
+        top: 0;
         margin-top: 130%;
       }
     }
