--- a/src/styles/tech.scss
+++ b/src/styles/tech.scss
@@ -2,13 +2,21 @@
   background: $additional-page-color;
   &__title {
     margin-bottom: 80px;
-    grid-column: 9 / -1;
+    grid-column: span 6;
+
+    @include on-tablet {
+      grid-column: span 4;
+    }
+
+    @include on-desktop {
+      grid-column: 9 / -1;
+    }
   }
 
   &__container {
     display: grid;
-    column-gap: 20px;
     grid-template-columns: repeat(12, 1fr);
+    column-gap: 20px;
     position: relative;
   }
 
